fix(layout): fix position on mobile

--- a/src/assets/css/components/container.css
+++ b/src/assets/css/components/container.css
@@ -1,8 +1,11 @@
 .wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+
+  @media only screen and (min-width: 1156px) {
+    justify-content: center;
+  }
 
   > .container {
     width: 100%;
